# encephagen

./: .gitignore  RDP.md  RDR-2026-04-01.md  RDR-2026-04-02.md  RDR-2026-04-03.md  RDR-2026-04-04.md  RDR-2026-04-05.md  RDR-2026-04-06.md  RDR-2026-04-07-complete.md  RDR-2026-04-07-final.md  RDR-2026-04-07.md  RDR-2026-04-08.md  README.md  demo.py  develop.py  develop_with_sleep.py  integrated_demo.py  interact.py  newborn.py  newborn_demo.py  newborn_full.py  pyproject.toml  visualize.py  visualize_humanoid.py
experiments/: 01_emergent_roles.py  02_comprehensive.py  03_deep_analysis.py  04_isolate_topology.py  05_spiking_hierarchy.py  06_familiarity_learning.py  07_learn_to_stand.py  08_topology_vs_random_embodied.py  09_learning_control.py  10_pendulum_learning.py  11_spontaneous_body.py  12_brain_spine_body.py  13_brain_modulates_walking.py  14_crawling_worm.py  15_conditioning.py  16_pattern_recognition.py  17_working_memory.py  18_integrated_cognition.py  19_learn_to_calibrate.py  20_walker2d_calibration.py  21_connectome_vs_random.py  22_eprop_connectome_vs_random.py  23_discrimination_analysis.py  24_definitive_structure_vs_random.py  25_scfc_validation.py  26_scfc_tuning.py  27_validated_connectome_vs_random.py  28_tvb66_tuning.py  29_neurolib80_connectome_vs_random.py  30_innate_dynamics.py  31_learning_scaffold.py  32_newborn.py  33_walker2d_brain.py  34_pure_brain_controller.py  35_lateralized_brain.py  36_optimize_spiking_cpg.py  37_cmaes_cpg.py  38_cpg_basin.py  39_generalization.py  40_microcircuit_brain.py  (+3 more)
results/: best_cpg_params.npy  (+1 more)
(+92 files in other folders)
