[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "encephagen"
version = "0.1.0"
description = "Does human brain structure produce emergent functional organization? A miniature brain simulation."
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "torch>=2.2",
    "numpy>=1.24",
    "scipy>=1.11",
    "networkx>=3.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff"]
all = ["encephagen[dev]"]

[tool.hatch.build.targets.wheel]
packages = ["src/encephagen"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
